# RISCV-simulator

./: CMakeLists.txt  Makefile  README.md  build.sh  cpu.cpp  cpu.h  install.sh  memory.h  runtest.sh  sim.cpp
src/: Read_Elf.cpp  cpu.cpp  cpu.h  loader.cpp  loader.h  macro.h  memory.h  sim.cpp  sim.h  simClkConfig.h  stats.cpp  stats.h
test/: CMakeLists.txt  ackermann  ackermann.c  add  add.asm  add.c  add_elf  factorial  factorial.c  lib.h  mm  mm.c  mul-div  mul-div.c  printtest.c  qsort  qsort.c  quicksort  quicksort.c  simple-fuction  simple-fuction.c  test  test.asm
